[tool.poetry]
name = "ansible-workspace"
version = "0.1.0"
description = "A collection of all my Ansible roles, playbooks, etc."
authors = ["Fabian Köhler <fabian.koehler@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible-lint = "^6.0.0"
ansible = "^5.0.0"
docker = "^5.0.2"
molecule = {extras = ["docker"], version = "^3.5.2"}
yamllint = "^1.26.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
